<resources>
    <string name="app_name">TravelApp</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="google_api_key">AIzaSyBWoSCXiTwr8ygoGLlHSLIJ3S7WRIiFCEA</string>
    <string name="direction_key">AIzaSyAQF8XWoqk8zeIt0x-67qgzDZrhVgVe8k8</string>
    <string name="title_GPS_Not_Enabled">GPS Not Enabled</string>
    <string name="message_Do_you_wants_to_turn_On_GPS">Do you wants to turn On GPS</string>
    <string name="message_Yes">Yes</string>
    <string name="message_No">No</string>
    <string name="message_no_service_provider_available">No Service Provider Available</string>
    <string name="message_you_are_here">you are here</string>
    <string name="message_turn_on_network">Please turn on network</string>
    <string name="message_not_found_address">Not Found Address</string>
    <string name="textview_btn_ok">OK</string>

    <string name="URL_BASE">https://travelapp-4961a.firebaseio.com/</string>
    <string name="button_close_text">Đóng</string>
    <string name="username_or_password_invalid">Sai tên đăng nhập hoặc mật khẩu</string>
    <string name="item_detail_tour_menu_edit">Sửa</string>
    <string name="item_detail_tour_menu_add_plan">Thêm kế hoạch</string>
    <string name="item_detail_tour_menu_people">Người tham gia</string>
    <string name="item_detail_tour_menu_delete_trip">Xóa chuyến đi</string>
    <string name="item_detail_tour_menu_merge_trip">Gộp chuyến đi</string>
    <string name="item_share_detail_schedule_menu">Chia sẻ</string>
    <string name="item_edit_plan_detail_schedule_menu">Chỉnh sửa kế hoạch</string>
    <string name="item_move_plan_detail_schedule_menu">Di chuyển kế hoạch</string>
    <string name="item_delete_plan_detail_schedule_menu">Xóa kế hoạch</string>
    <string name="button_direction_text">Hướng đi</string>
    <string name="button_detail_text">Chi tiết</string>
    <string name="textView_text_view">View</string>
    <string name="textView_text_contact_booking_infor"><![CDATA[Contact & Booking Infor]]></string>
    <string name="current_position">Vị trí hiện tại</string>
    <string name="cant_get_location">Không thể lấy vị trí hiện tại của bạn.</string>
    <string name="item_add_plan_detail_schedule_menu">Thêm thời gian</string>
</resources>
